oxiplate/tests/broken/unwritable-writ.stderr
error[E0599]: the method `oxiplate_escape` exists for reference `&&UnescapedTextWrapper<'_, Vec<&str>>`, but its trait bounds were not satisfied
 --> tests/broken/unwritable-writ.rs:4:29
  |
  4 | #[oxiplate_inline(html: "{{ messages }} {{ text: messages }} {{ raw: messages }}\n")]
    |                             ^^^^^^^^ method cannot be called on `&&UnescapedTextWrapper<'_, Vec<&str>>` due to unsatisfied trait bounds
    |
   ::: $RUST/alloc/src/vec/mod.rs
    |
    | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
    | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<&str>: FastEscape<'_, _>`, `Vec<&str>: ToString` or `Vec<&str>: std::fmt::Display`
    |
    = note: the following trait bounds were not satisfied:
            `Vec<&str>: FastEscape<'_, _>`
            which is required by `&UnescapedTextWrapper<'_, Vec<&str>>: UnescapedText<'_, _>`
            `Vec<&str>: ToString`
            which is required by `&&UnescapedTextWrapper<'_, Vec<&str>>: UnescapedText<'_, _>`
            `Vec<&str>: std::fmt::Display`
            which is required by `&&UnescapedTextWrapper<'_, Vec<&str>>: UnescapedText<'_, _>`

error[E0599]: the method `oxiplate_escape` exists for reference `&&UnescapedTextWrapper<'_, Vec<&str>>`, but its trait bounds were not satisfied
 --> tests/broken/unwritable-writ.rs:4:50
  |
  4 | #[oxiplate_inline(html: "{{ messages }} {{ text: messages }} {{ raw: messages }}\n")]
    |                                                  ^^^^^^^^ method cannot be called on `&&UnescapedTextWrapper<'_, Vec<&str>>` due to unsatisfied trait bounds
    |
   ::: $RUST/alloc/src/vec/mod.rs
    |
    | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
    | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<&str>: FastEscape<'_, _>`, `Vec<&str>: ToString` or `Vec<&str>: std::fmt::Display`
    |
    = note: the following trait bounds were not satisfied:
            `Vec<&str>: FastEscape<'_, _>`
            which is required by `&UnescapedTextWrapper<'_, Vec<&str>>: UnescapedText<'_, _>`
            `Vec<&str>: ToString`
            which is required by `&&UnescapedTextWrapper<'_, Vec<&str>>: UnescapedText<'_, _>`
            `Vec<&str>: std::fmt::Display`
            which is required by `&&UnescapedTextWrapper<'_, Vec<&str>>: UnescapedText<'_, _>`

error[E0599]: the method `oxiplate_raw` exists for reference `&&UnescapedTextWrapper<'_, Vec<&str>>`, but its trait bounds were not satisfied
 --> tests/broken/unwritable-writ.rs:4:70
  |
  4 | #[oxiplate_inline(html: "{{ messages }} {{ text: messages }} {{ raw: messages }}\n")]
    |                                                                      ^^^^^^^^ method cannot be called on `&&UnescapedTextWrapper<'_, Vec<&str>>` due to unsatisfied trait bounds
    |
   ::: $RUST/alloc/src/vec/mod.rs
    |
    | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
    | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<&str>: FastEscape<'_, _>`, `Vec<&str>: ToString` or `Vec<&str>: std::fmt::Display`
    |
    = note: the following trait bounds were not satisfied:
            `Vec<&str>: FastEscape<'_, _>`
            which is required by `&UnescapedTextWrapper<'_, Vec<&str>>: UnescapedText<'_, _>`
            `Vec<&str>: ToString`
            which is required by `&&UnescapedTextWrapper<'_, Vec<&str>>: UnescapedText<'_, _>`
            `Vec<&str>: std::fmt::Display`
            which is required by `&&UnescapedTextWrapper<'_, Vec<&str>>: UnescapedText<'_, _>`
